finished downgrade to jdk 1.8